--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -126,6 +126,9 @@
   grid-template-columns: repeat(7, 1fr);
   justify-items: center;
   row-gap: 0.3125rem;
+
+  -webkit-user-select: none; /* Для Safari */
+  user-select: none;
 }
 
 .day-item {
@@ -139,6 +142,11 @@
   height: 2rem;
 
   border-radius: 50%;
+
+  cursor: pointer;
+}
+.day-item:active {
+  background-color: var(--dark-bg);
 }
 
 /* GROK Добавлено: Стили для подсветки текущего дня цветом кнопки .arrow-btn (#ff3b5f) */
