--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -38,6 +38,9 @@
     display: block;
 
     margin-bottom: 10px;
+
+    -webkit-user-select: none; /* Для Safari */
+    user-select: none;
   }
 
   .weekends {
